--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1609,6 +1609,12 @@ p {
 	}
 }
 
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 /* ============================================================== 
     # Button Styles
 =================================================================== */
