add project medicare and solve problem space cards

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,7 +9,7 @@ Sidebar heading:  22px 'Barlow', sans-serif
 
 >>> TABLE OF CONTENTS:
 =======================
-        
+
     01. Template default css
         - Animations
         - General
@@ -78,7 +78,7 @@ Sidebar heading:  22px 'Barlow', sans-serif
 	--bg-gradient: linear-gradient(90deg, var(--color-secondary) 0%, var(--color-primary) 100%);
 }
 
-/* ============================================================== 
+/* ==============================================================
      # Reset Browsers
 =================================================================== */
 
@@ -288,7 +288,7 @@ strong {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Template Default Styles
 =================================================================== */
 
@@ -364,7 +364,7 @@ p {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Helper CSS
 =================================================================== */
 
@@ -950,8 +950,8 @@ p {
 	color: var(--white);
 }
 
-/* ============================================================== 
-    # Video Play Button 
+/* ==============================================================
+    # Video Play Button
 =================================================================== */
 .video-play-button i {
 	display: inline-block;
@@ -1091,7 +1091,7 @@ p {
 
 
 
-/* ============================================================== 
+/* ==============================================================
     # Template Animation
 =================================================================== */
 
@@ -1615,7 +1615,7 @@ p {
   display: table;
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Button Styles
 =================================================================== */
 .btn {
@@ -2791,7 +2791,7 @@ a.btn-round-animation:hover::after {
 	color: var(--color-heading);
 }
 
-/* ============================================================== 
+/* ==============================================================
     # Nice Select Styles
 =================================================================== */
 .nice-select {
@@ -3006,8 +3006,8 @@ a.btn-round-animation:hover::after {
 
 
 
-/* ============================================================== 
-    # Text Scroll Animation 
+/* ==============================================================
+    # Text Scroll Animation
 =================================================================== */
 .text-scroll-animation .text {
 	width: 100%;
@@ -3034,7 +3034,7 @@ a.btn-round-animation:hover::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Typed Text
 =================================================================== */
 .cd-words-wrapper {
@@ -3064,9 +3064,9 @@ a.btn-round-animation:hover::after {
 	opacity: 1;
 }
 
-/* -------------------------------- 
+/* --------------------------------
 
-xclip 
+xclip
 
 -------------------------------- */
 
@@ -3100,7 +3100,7 @@ xclip
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Banner Style One
 =================================================================== */
 .banner-style-one-area,
@@ -3428,7 +3428,7 @@ a.btn-style-one::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # About Style One
 =================================================================== */
 
@@ -3577,7 +3577,7 @@ a.btn-style-one::after {
 	transform: translate(-50%, -50%);
 }
 
-/* ============================================================== 
+/* ==============================================================
      # Service
 =================================================================== */
 .service-style-one-item {
@@ -3687,7 +3687,7 @@ a.btn-style-four .icon img {
 	bottom: -150px;
 }
 
-/* ============================================================== 
+/* ==============================================================
      # Service Details
 =================================================================== */
 .process-style-one {
@@ -3750,7 +3750,7 @@ a.btn-style-four .icon img {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Portfolio
 =================================================================== */
 
@@ -3760,26 +3760,39 @@ a.btn-style-four .icon img {
 }
 
 .magnific-mix-gallery {
-	margin: -15px;
+	margin: -20px;
 	overflow: hidden;
+}
+
+.gallery-items.clearfix {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	margin: 0 auto;
 }
 
 .gallery-items.colums-3 .gallery-item {
 	float: left;
-	padding: 15px;
+	padding: 20px;
 	width: 33.3333%;
+	height: auto;
+	display: block;
 }
 
 .gallery-items.colums-2 .gallery-item {
 	float: left;
-	padding: 15px;
+	padding: 20px;
 	width: 50%;
+	height: auto;
+	display: block;
 }
 
 .gallery-items.colums-4 .gallery-item {
 	float: left;
-	padding: 15px;
+	padding: 20px;
 	width: 25%;
+	height: auto;
+	display: block;
 }
 
 /* Mobile Layout: 320px. */
@@ -3789,8 +3802,21 @@ a.btn-style-four .icon img {
 	.gallery-items.colums-3 .gallery-item,
 	.gallery-items.colums-4 .gallery-item {
 		width: 100%;
-		padding-left: 0;
-		padding-right: 0;
+		padding: 15px;
+		margin-bottom: 0;
+	}
+
+	.magnific-mix-gallery {
+		margin: -15px;
+	}
+
+	.gallery-style-one {
+		height: auto;
+		min-height: auto;
+	}
+
+	.gallery-style-one .image-container {
+		margin-bottom: 20px;
 	}
 }
 
@@ -3803,22 +3829,49 @@ a.btn-style-four .icon img {
 	.gallery-items.colums-3 .gallery-item,
 	.gallery-items.colums-4 .gallery-item {
 		width: 50%;
+		padding: 18px;
+		margin-bottom: 0;
+	}
+
+	.magnific-mix-gallery {
+		margin: -18px;
+	}
+
+	.gallery-style-one {
+		height: 100%;
+	}
+
+	.gallery-style-one .image-container {
+		margin-bottom: 25px;
 	}
 }
 
 .gallery-style-one {
-	padding: 15px;
+	padding: 20px;
 	background: linear-gradient(50deg, var(--white) 20%, #ECF0F3 100%);
 	border: 1px solid rgba(255, 255, 255, 0.8);
-	border-radius: 10px;
-	box-shadow: 0 0 9px 0 rgb(109 117 143 / 5%);
+	border-radius: 15px;
+	box-shadow: 0 0 15px 0 rgb(109 117 143 / 8%);
 	position: relative;
 	transition: all 0.35s ease-in-out;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.gallery-style-one .image-container {
+	height: auto;
+	display: block;
+	margin-bottom: 25px;
+	overflow: hidden;
+	border-radius: 10px;
 }
 
 .gallery-style-one img {
-	border-radius: 5px;
-	margin-bottom: 30px;
+	border-radius: 10px;
+	width: 100%;
+	height: auto;
+	display: block;
 }
 
 .gallery-style-one .overlay {
@@ -3849,8 +3902,7 @@ a.btn-style-four .icon img {
 }
 
 .gallery-style-one .info {
-	padding: 0 15px;
-	padding-bottom: 15px;
+	padding: 0;
 }
 
 ul.pf-tags {
@@ -3868,9 +3920,10 @@ ul.pf-tags li {
 ul.pf-tags li a {
 	display: inline-block;
 	border: 1px solid #a2a2a2;
-	padding: 0 20px;
+	padding: 2px 15px;
 	border-radius: 30px;
 	font-weight: 400;
+	font-size: 14px;
 }
 
 .gallery-style-one .overlay h4 {
@@ -3880,8 +3933,9 @@ ul.pf-tags li a {
 
 .gallery-style-one .info h4 {
 	margin: 0;
-	margin-top: 15px;
-	font-size: 30px;
+	margin-top: 20px;
+	font-size: 24px;
+	line-height: 1.3;
 }
 
 .load-more-info p {
@@ -3904,7 +3958,7 @@ ul.pf-tags li a {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Portfolio Single
 =================================================================== */
 .image-move-bg {
@@ -4116,7 +4170,7 @@ ul.list-style-one li::after {
 
 
 
-/* ============================================================== 
+/* ==============================================================
      # Fun Fact
 =================================================================== */
 .fun-fact-style-two-items {
@@ -4171,7 +4225,7 @@ ul.list-style-one li::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Timeline
 =================================================================== */
 .time-style-one-items {
@@ -4257,7 +4311,7 @@ ul.list-style-one li::after {
 
 
 
-/* ============================================================== 
+/* ==============================================================
      # Testimonials
 =================================================================== */
 .testimonial-style-one .item {
@@ -4467,7 +4521,7 @@ ul.list-style-one li::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Pricing
 =================================================================== */
 
@@ -4563,7 +4617,7 @@ ul.list-style-one li::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Faq
 =================================================================== */
 .thumb-style-one {
@@ -4700,7 +4754,7 @@ ul.list-style-one li::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Home Blog
 =================================================================== */
 
@@ -4776,7 +4830,7 @@ a.btn-read-more:hover {
 	transform: scale(1.1);
 }
 
-/* ============================================================== 
+/* ==============================================================
      # Contact
 =================================================================== */
 .contact-style-one-items {
@@ -4881,7 +4935,7 @@ form.contact-form.contact-form {
 	color: var(--color-heading);
 }
 
-/* ============================================================== 
+/* ==============================================================
      # Promo Box
 =================================================================== */
 a.btn-circle-large {
@@ -4954,7 +5008,7 @@ a.btn-circle-large img {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
      # Footer
 =================================================================== */
 .footer-logot img {
@@ -5025,7 +5079,7 @@ footer::after {
 
 
 
-/* ============================================================== 
+/* ==============================================================
     # Dark CSS
 =================================================================== */
 .bg-dark .banner-style-one-items .d-grid .circle-text-card a i {
@@ -5322,7 +5376,7 @@ footer::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # 404 page
 =================================================================== */
 
@@ -5377,7 +5431,7 @@ footer::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Responsive CSS
 =================================================================== */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {}
@@ -6332,7 +6386,7 @@ footer::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Preloader CSS
 =================================================================== */
 body.loaded {
